Fixes 100vw/% scrollbar overflow

--- a/web/components/sections/Hero.module.css
+++ b/web/components/sections/Hero.module.css
@@ -14,7 +14,7 @@
 }
 
 .content {
-  width: 100vw;
+  width: 100%;
   min-height: 100vh;
   padding: 0 1.5em;
   box-sizing: border-box;
@@ -30,7 +30,7 @@
   top: 0;
   overflow: hidden;
   display: block;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   object-fit: cover;
   opacity: 0;
@@ -43,7 +43,7 @@
   top: 0;
   overflow: hidden;
   display: block;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   object-fit: cover;
   z-index: -1;
@@ -55,7 +55,7 @@
   top: 0;
   overflow: hidden;
   display: block;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   object-fit: cover;
   opacity: 1;
