--- a/web/components/sections/HomePage.module.css
+++ b/web/components/sections/HomePage.module.css
@@ -28,7 +28,7 @@
 }
 
 .content {
-  width: 100vw;
+  width: 100%;
   min-height: 100vh;
   padding: 0 1.5em;
   box-sizing: border-box;
