--- a/web/components/sections/LocationsImageGallery.module.css
+++ b/web/components/sections/LocationsImageGallery.module.css
@@ -5,7 +5,7 @@
   position: relative;
   padding: 2rem 0;
   height: 100vh;
-  width: 100vw;
+  width: 100%;
   z-index: 30;
   position: absolute;
   top: 0;
