--- a/web/components/sections/Video.module.css
+++ b/web/components/sections/Video.module.css
@@ -12,7 +12,7 @@
 }
 
 .wrapper iframe {
-  width: 100vw;
+  width: 100%;
   height: 56.25vw; /* Given a 16:9 aspect ratio, 9/16*100 = 56.25 */
   min-height: 100vh;
   min-width: 177.77vh; /* Given a 16:9 aspect ratio, 16/9*100 = 177.77 */
